# gte-consumer-example

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
HeaderOnly/: CMakeLists.txt  DistanceUnitAlignedBoxes.cpp  TestDistanceUnitAlignedBoxes.cpp  conanfile.py
doc/: conan-consumer-guide.md
src/: DistanceUnitAlignedBoxes.h
